--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "parserOptions": {
         "ecmaVersion": 6,
         "ecmaFeatures": {
-            "jsx": true
+            "legacyDecorators": true
           },
         "sourceType": "module"
     },
